--- a/download.html
+++ b/download.html
@@ -118,7 +118,7 @@
     <a href="আপনার_ফেসবুক_লিঙ্ক_এখানে" target="_blank" style="color: white;">
         <i class="fa-brands fa-facebook"></i>
     </a>
-    <a href="https://t.me/filmixo_hub" target="_blank" style="color: white;">
+    <a href="https://whatsapp.com/channel/0029VbBoOki1iUxRTHPME83U" target="_blank" style="color: white;">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
     <a href="https://t.me/filmixo_hub" target="_blank" style="color: white;">
