--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         .profile-pic img { width: 100%; height: 100%; object-fit: cover; }
         .cover-photo::after{content:"";position:absolute;inset:0;background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.8' numOctaves='1'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='.04'/%3E%3C/svg%3E");pointer-events:none} 
         .cover-photo{width:100%;aspect-ratio:19/9;position:relative;overflow:hidden;background:radial-gradient(circle at center,#111 0%,#000 70%);contain:layout paint;transform:translateZ(0)} 
-        .intro-text{position:absolute;z-index:6;font-size:36px;font-weight:900;letter-spacing:18px;color:#fff;opacity:0;text-shadow:0 0 12px #fff,0 0 28px #1da1f2;will-change:opacity,transform,filter;pointer-events:none} 
-        @keyframes cinematicIntro{0%{opacity:0;transform:scale(.65);filter:blur(18px)}45%{opacity:1;filter:blur(0)}75%{opacity:1;transform:scale(1.05)}100%{opacity:0;transform:scale(1.4);filter:blur(12px)}} 
+        .intro-text { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 6; font-size: 36px; font-weight: 900; letter-spacing: 18px; color: #fff; opacity: 0; text-shadow: 0 0 12px #fff, 0 0 28px #1da1f2; will-change: opacity, transform, filter; pointer-events: none; white-space: nowrap; }
+        @keyframes cinematicIntro { 0% { opacity: 0; transform: translate(-50%, -50%) scale(.65); filter: blur(18px); } 45% { opacity: 1; filter: blur(0); transform: translate(-50%, -50%) scale(1); } 75% { opacity: 1; transform: translate(-50%, -50%) scale(1.05); } 100% { opacity: 0; transform: translate(-50%, -50%) scale(1.4); filter: blur(12px); } } 
         .action-buttons { display: flex; gap: 8px; margin-top: 10px; }
         .btn { border: none; padding: 8px 16px; border-radius: 20px; font-size: 14px; font-weight: bold; color: white; cursor: pointer; display: flex; align-items: center; gap: 5px; transition: transform 0.1s; -webkit-tap-highlight-color: transparent; user-select: none; }
         .btn:active { transform: scale(0.95); }
