--- a/post.html
+++ b/post.html
@@ -43,10 +43,11 @@
     .content-body { padding: 15px 15px 0 15px; }  
     .article-title { font-size: 20px; font-weight: 800; margin-bottom: 15px; color: #0f1419; line-height: 1.3; }  
     .article-para { font-size: 15px; line-height: 1.2; color: #1c1e21; margin-bottom: 12px; text-align: left; letter-spacing: -0.3px; }  
-    .ad-free-container { display: block; text-align: center; width: 100%; overflow: visible; margin: 15px 0; }
-    .ad-free-container * { max-width: none !important; width: auto !important; height: auto !important; }
-    #top-ad-id { margin: 15px 0; } #bottom-ad-id { margin: 20px 0; }
+    .ad-free-container { display: flex; justify-content: center; width: calc(100% + 30px); margin-left: -15px; margin-right: -15px; overflow: visible; }
+    .ad-free-container div, .ad-free-container iframe { width: auto !important; height: auto !important; max-width: none !important; min-width: 320px !important; }
+    #top-ad-id { margin-top: 10px; margin-bottom: 15px; } #bottom-ad-id { margin-top: 20px; margin-bottom: 20px; }
 
+        
     /* --- ডাউনলোড বাটন সেকশন --- */  
     .download-title-text { font-size: 18px; font-weight: 800; color: #0f1419; text-align: center; margin: 20px 0 10px 0; padding: 0 15px; border-top: 1px solid #e1e8ed; padding-top: 15px; }  
     .download-buttons-container { padding: 0 15px; margin-bottom: 20px; display: flex; flex-direction: column; gap: 12px; }  
