Insert ad scripts in post.html
Added ad scripts for top and mid sections.

--- a/post.html
+++ b/post.html
@@ -132,12 +132,22 @@
 
 <!-- [AD SECTION 1] Thumbnail এর উপরের অ্যাড -->
 <template id="ad-src-top">
-    <!-- এখানে এডের কোড লাগান -->
+    <script>
+  atOptions = {
+    'key' : 'da9154b956691d2aa7c677010e7b6501',
+    'format' : 'iframe',
+    'height' : 60,
+    'width' : 468,
+    'params' : {}
+  };
+</script>
+<script src="https://prototypesorting.com/da9154b956691d2aa7c677010e7b6501/invoke.js"></script>
 </template>
 
 <!-- [AD SECTION 2] Article এর নিচের অ্যাড -->
 <template id="ad-src-mid">
-    <!-- এখানে এডের কোড লাগান -->
+    <script async="async" data-cfasync="false" src="https://prototypesorting.com/1608cb6a976841a38e804d64801334bb/invoke.js"></script>
+<div id="container-1608cb6a976841a38e804d64801334bb"></div>
 </template>
 
 
