--- a/post.html
+++ b/post.html
@@ -39,9 +39,9 @@
     .play-btn-center { position: absolute; width: 60px; height: 60px; background: rgba(0,0,0,0.6); border-radius: 50%; border: 3px solid #fff; display: flex; align-items: center; justify-content: center; z-index: 5; pointer-events: none; }
     .play-btn-center::after { content: ''; border-left: 20px solid white; border-top: 12px solid transparent; border-bottom: 12px solid transparent; margin-left: 5px; }
     .main-video-spinner { display: none; position: absolute; width: 50px; height: 50px; border: 5px solid rgba(255, 255, 255, 0.3); border-top: 5px solid #fff; border-radius: 50%; animation: spin 1s linear infinite; z-index: 6; }
-    .video-controls { position: absolute; bottom: 0; left: 0; width: 100%; padding: 10px; display: flex; align-items: center; gap: 10px; background: linear-gradient(transparent, rgba(0,0,0,0.8)); z-index: 10; color: white; font-size: 11px; }
-    .prog-bg { flex-grow: 1; height: 4px; background: rgba(255,255,255,0.3); border-radius: 2px; }
-    .prog-fill { width: 35%; height: 100%; background: #ff0000; border-radius: 2px; }
+    .video-controls { position: absolute; bottom: 0; left: 0; width: 100%; height: 35px; padding: 0 10px; display: flex; align-items: center; gap: 10px; background: rgba(0, 0, 0, 0.5); z-index: 10; color: white; font-size: 11px; }
+    .prog-bg { flex-grow: 1; height: 3px; background: rgba(255, 255, 255, 0.3); border-radius: 2px; }
+    .prog-fill { width: 1%; height: 100%; background: #ff0000; border-radius: 2px; } 
     .hd-badge { background: #ffad1f; color: #000; padding: 1px 4px; border-radius: 3px; font-size: 10px; font-weight: 900; }
 
     /* --- আর্টিকেল ও কন্টেন্ট --- */
@@ -290,16 +290,19 @@
             
             <div id="ad-box-top" class="ad-box"></div>
 
-    <div class="video-container" onclick="handleVideoClick()">
-    <img src="${post.mediaImage}" loading="eager" decoding="sync" fetchpriority="high" alt="Movie Thumbnail">
-    <div class="play-btn-center" id="main-play-btn"></div>
-    <div class="main-video-spinner" id="main-spinner"></div>
-    <div class="video-controls">
-        <div class="time-text">00:00 / ${post.videoDuration || '12:40'}</div>
-        <div class="prog-bg"><div class="prog-fill"></div></div>
-        <div style="display:flex; align-items:center; gap:5px;"><i class="fa-solid fa-volume-high" style="color:white; font-size:10px;"></i><span class="hd-badge">HD</span></div>
-    </div>
-</div>
+            <div class="video-container" onclick="handleVideoClick()">
+            <img src="${post.mediaImage}" loading="eager" decoding="sync" fetchpriority="high" alt="Movie Thumbnail">
+            <div class="play-btn-center" id="main-play-btn"></div>
+            <div class="main-video-spinner" id="main-spinner"></div>
+            <div class="video-controls">
+            <div class="time-text">${post.videoDuration}</div>
+            <div class="prog-bg"><div class="prog-fill"></div></div>
+            <div style="display:flex; align-items:center; gap:5px;">
+            <i class="fa-solid fa-volume-high" style="color:white; font-size:10px;"></i>
+            <span class="hd-badge">HD</span>
+             </div>
+             </div>
+           </div>
 
             <div class="content-body">  
                 ${content} 
