--- a/post.html
+++ b/post.html
@@ -39,10 +39,10 @@
      .play-btn-center { position: absolute; width: 60px; height: 60px; background: rgba(0,0,0,0.6); border-radius: 50%; border: 3px solid #fff; display: flex; align-items: center; justify-content: center; z-index: 5; pointer-events: none; }
      .play-btn-center::after { content: ''; border-left: 20px solid white; border-top: 12px solid transparent; border-bottom: 12px solid transparent; margin-left: 5px; }
      .main-video-spinner { display: none; position: absolute; width: 50px; height: 50px; border: 5px solid rgba(255, 255, 255, 0.3); border-top: 5px solid #fff; border-radius: 50%; animation: spin 1s linear infinite; z-index: 6; }
-     .video-controls { position: absolute; bottom: 0; left: 0; width: 100%; height: 35px; padding: 0 10px 6px 10px; display: flex; align-items: center; gap: 10px; background: rgba(0, 0, 0, 0.5); z-index: 10; color: white; font-size: 11px; }
+     .video-controls { position: absolute; bottom: 0; left: 0; width: 100%; height: 35px; padding: 0 10px; display: flex; align-items: center; gap: 10px; background: rgba(0, 0, 0, 0.5); z-index: 10; color: white; font-size: 11px; }
      .time-text { font-weight: 600; white-space: nowrap; }
-     .prog-bg { flex-grow: 1; height: 5px; background: rgba(255, 255, 255, 0.3); border-radius: 3px; }
-     .prog-fill { width: 1.5%; height: 100%; background: #ff0000; border-radius: 3px; }
+     .prog-bg { flex-grow: 1; height: 7px; background: rgba(255, 255, 255, 0.3); border-radius: 4px; }
+     .prog-fill { width: 1.5%; height: 100%; background: #ff0000; border-radius: 4px; }
      .video-controls i { font-size: 13px; }
      .hd-badge { background: #ffad1f; color: #000; padding: 1px 4px; border-radius: 3px; font-size: 9px; font-weight: 900; }
         
