--- a/post.html
+++ b/post.html
@@ -35,7 +35,7 @@
 
      /* --- ভিডিও প্লেয়ার সেকশন --- */
      .video-container { position: relative; width: 94%; margin: 12px auto; aspect-ratio: 16/9; background: #000; overflow: hidden; cursor: pointer; display: flex; align-items: center; justify-content: center; contain: content; }
-     .video-container img { width: 100%; height: 100%; object-fit: cover; opacity: 0.85; display: block; will-change: transform; transition: filter 0.3s ease; }
+     .video-container img { width: 100%; height: 100%; object-fit: cover; opacity: 0.85; display: block; will-change: transform; transition: all 0.3s ease; }
      .play-btn-center { position: absolute; width: 60px; height: 60px; background: rgba(0,0,0,0.6); border-radius: 50%; border: 3px solid #fff; display: flex; align-items: center; justify-content: center; z-index: 5; pointer-events: none; }
      .play-btn-center::after { content: ''; border-left: 20px solid white; border-top: 12px solid transparent; border-bottom: 12px solid transparent; margin-left: 5px; }
      .main-video-spinner { display: none; position: absolute; width: 50px; height: 50px; border: 5px solid rgba(255, 255, 255, 0.3); border-top: 5px solid #fff; border-radius: 50%; animation: spin 1s linear infinite; z-index: 6; }
@@ -45,7 +45,7 @@
      .prog-fill { width: 1.5%; height: 100%; background: #ff0000; border-radius: 4px; }
      .video-controls i { font-size: 13px; }
      .hd-badge { background: #ffad1f; color: #000; padding: 1px 4px; border-radius: 3px; font-size: 9px; font-weight: 900; }
-     .video-container.is-loading img { filter: blur(5px); opacity: 0.6; }
+     .video-container.is-loading img { filter: brightness(0.6); opacity: 0.7; }
      .video-container.is-loading .video-controls { display: none !important; }
      .video-container.is-loading .play-btn-center { display: none !important; }
 
