--- a/post.html
+++ b/post.html
@@ -171,8 +171,8 @@
     <header>  
         <div class="logo-area">FILMIXO</div>  
         <div>  
-            <span class="header-btn" onclick="window.location.href='https://prototypesorting.com/dkhpkccgup?key=f93978b429dfbcf244b3718ef67223ef'">Tutorial Vdo</span>  
-            <span class="header-btn" onclick="window.location.href='index.html'">Home</span>  
+            <span class="header-btn" onclick="window.location.href='https://prototypesorting.com/dkhpkccgup?key=f93978b429dfbcf244b3718ef67223ef'"><i class="fa-solid fa-circle-play" style="margin-right: 5px;"></i>Tutorial Vdo</span>
+            <span class="header-btn" onclick="window.location.href='index.html'"><i class="fa-solid fa-house" style="margin-right: 5px;"></i>Home</span>
         </div>  
     </header>  
     
