--- a/post.html
+++ b/post.html
@@ -16,11 +16,11 @@
     .main-wrapper.loaded { opacity: 1 !important; }  
 
     /* --- তোমার বর্তমান কোড --- */
-    header { background: #1da1f2; padding: 5px 15px; display: flex; justify-content: space-between; align-items: center; color: white; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }  
+    header { background: #1da1f2; padding: 10px 15px; display: flex; justify-content: space-between; align-items: center; color: white; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }  
     .logo-area { font-weight: 900; font-size: 23px; text-transform: uppercase; line-height: 1; display: flex; align-items: center; }  
-    .header-btn { background: white; color: #1da1f2; padding: 5px 15px; border-radius: 15px; font-weight: bold; font-size: 12px; margin-left: 5px; cursor: pointer; transition: transform 0.1s ease; display: inline-flex; align-items: center; justify-content: center; height: 28px; }  
+    .header-btn { background: white; color: #1da1f2; padding: 6px 15px; border-radius: 15px; font-weight: bold; font-size: 12px; margin-left: 5px; cursor: pointer; transition: transform 0.1s ease; display: inline-flex; align-items: center; justify-content: center; }  
     .header-btn:active { transform: scale(0.95); box-shadow: 0 0 5px rgba(0, 0, 0, 0.2) inset; }
-    header > div { display: flex; align-items: center; }
+    header > div { display: flex; align-items: center; gap: 2px; }
         
     /* --- [স্মার্ট অ্যাড বক্স] --- */
     /* অ্যাড না থাকলে হাইট ০ থাকবে, অ্যাড আসলে অটোমেটিক জায়গা নিবে */
